--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,18 @@
   font-family: 'Outfit', sans-serif;
 }
 
+.input-base {
+  @apply border-2 border-solid border-indigo-500 p-2 rounded-lg;
+}
+
+
+.form-container {
+  @apply flex flex-col justify-center border-4 border-solid border-indigo-500 p-5 max-w-[500px] min-w-[250px] max-h-[500px] min-h-[300px] mx-auto rounded-xl;
+}
+
+.button-base {
+  @apply border-2 border-solid border-indigo-500 p-1 w-[100px] mx-auto mt-4 rounded-lg;
+}
 
 @tailwind base;
 @tailwind components;
