--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@
 
 
 .form-container {
-  @apply flex flex-col justify-center border-4 border-solid border-indigo-500 p-5 max-w-[500px] min-w-[250px] max-h-[500px] min-h-[300px] mx-auto rounded-xl;
+  @apply border-4 border-solid border-indigo-500 p-5 max-w-[500px] min-w-[250px] max-h-[500px] min-h-[300px] mx-auto rounded-xl;
 }
 
 .button-base {
